--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3
 ENV PYTHONUNBUFFERED 1
 WORKDIR /app/api
-COPY requirements.txt /app/api/
-RUN pip install -r requirements.txt
+COPY ./requirements ./requirements/
+RUN pip install -r requirements/local.txt
 COPY . /app/api/
 EXPOSE 8000
