connect and configure translation API

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,7 +45,7 @@ services:
     container_name: react
     volumes:
       - ./frontend:/app/frontend
-      - /app/frontend/node_modules
+      - node_modules:/app/frontend/node_modules
     ports:
       - "3000:3000"
     stdin_open: true
@@ -60,3 +60,6 @@ networks:
 
 volumes:
   db:
+  node_modules:
+
+
