--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,4 @@
-REACT_APP_API_TRANSLATOR_URL=your_url
+# you should create bouth of files: .env.development and .env.production
+
+REACT_APP_TRANSLATOR_API_KEY=your_key
+REACT_APP_TRANSLATOR_API_ENDPOINT=your_endpoint
