--- a/backend/Dockerfile.development
+++ b/backend/Dockerfile.development
@@ -2,6 +2,6 @@ FROM python:3
 ENV PYTHONUNBUFFERED 1
 WORKDIR /app/api
 COPY ./requirements ./requirements/
-RUN pip install -r requirements/production.txt
+RUN pip install -r requirements/local.txt
 COPY . /app/api/
 EXPOSE 8000
