--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,25 +33,18 @@ services:
     depends_on:
       - db
 
-  frontend:
+  nginx:
+    container_name: nginx
+    restart: unless-stopped
     build:
       context: ./frontend/
       dockerfile: Dockerfile
-    volumes:
-      - build:/app/frontend/build
-
-  nginx:
-    container_name: nginx
-    image: nginx:latest
     ports:
-      - 80:8080
+      - 80:80
     volumes:
-      - ./nginx/nginx-setup.conf:/etc/nginx/conf.d/default.conf:ro
-      - build:/var/www/react
+      - ./nginx/:/etc/nginx/conf.d
     depends_on:
       - backend
-      - frontend
 
 volumes:
   db:
-  build:
