--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,12 @@
-FROM node:18-alpine
+FROM node:13.12.0-alpine as build
+
 WORKDIR /app/frontend
 
 COPY package.json ./
-RUN npm install 
-COPY . /app/frontend/
+RUN npm install --silent
+COPY . /app/frontend
 RUN npm run build
+
+FROM nginx:stable-alpine
+COPY --from=build /app/frontend/build /usr/share/nginx/html
+CMD ["nginx", "-g", "daemon off;"]
