--- a/nginx/nginx-setup.conf
+++ b/nginx/nginx-setup.conf
@@ -1,7 +1,27 @@
 server {
     listen 80;
-    server_name _;
+    server_name words-coach-app.fun;
     server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name words-coach-app.fun;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/words-coach-app.fun/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/words-coach-app.fun/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
     client_max_body_size 20M;
 
     location / {
@@ -13,7 +33,6 @@ server {
     location /api {
         try_files $uri @proxy_api;
     }
-    
     location /admin {
         try_files $uri @proxy_api;
     }
@@ -26,4 +45,5 @@ server {
         proxy_redirect off;
         proxy_pass   http://backend:8000;
     }
+
 }
