--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy
 on:
   push:
     branches:
-      - git-actions
+      - master
 
 jobs: 
 
@@ -17,7 +17,8 @@ jobs:
           username: ${{secrets.SSH_USERNAME}}
 
           script: |
-            mkdir test
-            cd test
-            git clone git@github.com:newdisease/words-coach-app.git
-            echo "Deployment complete"
+            git pull origin master
+            docker-compose down
+            docker-compose up --build -d
+            docker image rm $(docker image ls -f 'dangling=true' -q)
+            echo "Deployment has been completed"
