--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
-    "nth-check": ">=2.0.1"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
