--- a/frontend/Dockerfile.development
+++ b/frontend/Dockerfile.development
@@ -1,7 +1,7 @@
 FROM node:18-alpine
 WORKDIR /app/frontend
 
-COPY package.json ./
+COPY package.json package-lock.json ./
 RUN npm install 
 COPY . /app/frontend/
 EXPOSE 3000
