add django static files

--- a/nginx/nginx-setup.conf
+++ b/nginx/nginx-setup.conf
@@ -46,4 +46,8 @@ server {
         proxy_pass   http://backend:8000;
     }
 
+    location /django_static/ {
+        autoindex on;
+        alias /app/backend/config/django_static/;
+    }
 }
