--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
 
           script: |
             git pull origin master
+            docker exec -it api bash python manage.py dumpdata > data.json
             docker-compose down
             docker-compose up --build -d
             docker image rm $(docker image ls -f 'dangling=true' -q)
-            echo "Deployment has been completed"
