--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
       - 80:80
       - 443:443
     volumes:
+      - static_volume:/app/api/config/django_static
       - ./nginx/:/etc/nginx/conf.d
       - ./nginx/certbot/conf/:/etc/letsencrypt/
       - ./nginx/certbot/www:/var/www/certbot
@@ -44,13 +45,14 @@ services:
   backend:
     restart: always
     container_name: api
-    command: bash -c "python manage.py makemigrations && python manage.py migrate && gunicorn config.wsgi --bind 0.0.0.0:8000"
+    command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py collectstatic --noinput && gunicorn config.wsgi --bind 0.0.0.0:8000"
     env_file:
       - ./backend/.env
     build:
       context: ./backend/
       dockerfile: Dockerfile
     volumes:
+      - static_volume:/app/api/config/django_static
       - ./backend:/app/api
     expose:
       - 8000
@@ -59,3 +61,4 @@ services:
 
 volumes:
   db:
+  static_volume:
