--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,3 +22,4 @@ jobs:
             docker-compose down
             docker-compose up --build -d
             docker image rm $(docker image ls -f 'dangling=true' -q)
+            echo "Done"
