try to fix saticfiles for django

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,5 @@ jobs:
             docker-compose down
             docker-compose up --build -d
             docker image rm $(docker image ls -f 'dangling=true' -q)
+            docker volume prune -f
             echo "Done"
