--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,6 @@ DATABASE_NAME=postgres
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_HOST=db
+
+# translate
+DEEPL_AUTH_KEY=YOUR_DEEPL_KEY
