--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
           username: ${{secrets.SSH_USERNAME}}
 
           script: |
+            docker exec -t postgres pg_dumpall -c -U ${{secrets.DB_NAME}} > /home/dump_`date +%d-%m-%Y"_"%H_%M_%S`.sql
             git pull origin master
             docker-compose down
             docker-compose up --build -d
