--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@hookform/resolvers": "^2.9.6",
     "@react-oauth/google": "^0.2.6",
     "@reduxjs/toolkit": "^1.8.3",
+    "@speechly/speech-recognition-polyfill": "^1.2.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
