--- a/nginx/nginx-setup.conf
+++ b/nginx/nginx-setup.conf
@@ -35,6 +35,11 @@ server {
     gzip_min_length 0;
     gzip_types text/plain application/javascript text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype;
 
+    location ~* \.(woff|woff2)$ {
+        expires max;
+        add_header Cache-Control "public, no-transform";
+}
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
