--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,8 @@
 name: Deploy
-on:
-  push:
-    branches:
-      - master
-
+# on:
+#   push:
+#     branches:
+#       - master
 jobs:
   deploy:
     runs-on: ubuntu-latest
