--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: Deploy
-# on:
-#   push:
-#     branches:
-#       - master
+on:
+  push:
+    branches:
+      - "releases/**"
 jobs:
   deploy:
     runs-on: ubuntu-latest
