--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: Deploy
+
 on:
   push:
-    branches:
-      - "releases/**"
+    tags:
+      - "*"
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -15,6 +16,7 @@ jobs:
           username: ${{secrets.SSH_USERNAME}}
 
           script: |
+            cd wca/
             docker exec -t postgres pg_dumpall -c -U ${{secrets.DB_NAME}} > /home/dump_`date +%d-%m-%Y"_"%H_%M_%S`.sql
             git pull origin master
             docker-compose down
