edit django static path

--- a/nginx/nginx-setup.conf
+++ b/nginx/nginx-setup.conf
@@ -64,6 +64,6 @@ server {
 
     location /django_static/ {
         autoindex on;
-        alias /app/api/config/django_static/;
+        alias /app/api/django_static/;
     }
 }
